--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
+    "test:e2e": "cypress run",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "test:e2e": "cypress open"
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
