Add health check route

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fso-pokedex-prod"
           heroku_email: "crypticspaghetti@protonmail.com"
+          healthcheck: "https://fso-pokedex-prod.herokuapp.com/health"
+          checkstring: "ok"
